--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,32 @@ body {
   font-family: "Inter", sans-serif;
 }
 
+/* Video Container */
+.video-container {
+  width: 100%;
+  height: 388px;
+  max-width: 772px;
+  border-radius: var(--big-border-radius);
+}
+
+/* Video Player */
+.video-player::-webkit-media-controls-volume-slider {
+  display: none;
+}
+
+.video-player::-webkit-media-controls-mute-button {
+  display: none;
+}
+
+.video-player {
+  border: none;
+  outline: transparent;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: var(--big-border-radius);
+}
+
 /* Loader Animation */
 .lds-ellipsis {
   display: inline-block;
