--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 :root {
   --main-bg-color: #f7f7f8;
   --white-color: #ffffff;
+  --red-color: #fa5872;
   --accent-color: #192033;
 
   --big-border-radius: 24px;
@@ -19,32 +20,39 @@
 
 body {
   font-family: "Inter", sans-serif;
+  background-color: var(--main-bg-color);
 }
 
 /* Video Container */
 .video-container {
+  margin: 3rem;
   width: 100%;
   height: 388px;
   max-width: 772px;
   border-radius: var(--big-border-radius);
+  transition: all 0.25s ease;
+}
+
+.video-container:hover {
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px;
 }
 
 /* Video Player */
+.video-player {
+  border: none;
+  outline: unset;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: inherit;
+}
+
 .video-player::-webkit-media-controls-volume-slider {
   display: none;
 }
 
 .video-player::-webkit-media-controls-mute-button {
   display: none;
-}
-
-.video-player {
-  border: none;
-  outline: transparent;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: var(--big-border-radius);
 }
 
 /* Loader Animation */
