--- a/src/index.css
+++ b/src/index.css
@@ -372,11 +372,21 @@ header a {
 /* Gif Container */
 .gif-container {
   margin-top: 15rem;
-  margin-bottom: 3rem;
+  margin-bottom: 1.75rem;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 20px 30px;
 }
 
-.gif-container:hover {
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px;
+/* Gif File Size */
+.gif-size {
+  text-align: center;
+  margin-bottom: 0.45rem;
+  font-size: 0.85rem;
+  font-weight: 500;
+}
+
+.gif-size span {
+  font-size: 0.9rem;
+  font-weight: 700;
 }
 
 /* Multi Range Slider */
@@ -500,6 +510,39 @@ header a {
   transform: translate(122px, 1px);
 }
 
+/* Download Button */
+.download-button {
+  text-decoration: none;
+  border: none;
+  outline: none;
+  min-width: 246px;
+  max-width: fit-content;
+  padding: 15px 22px;
+  border-radius: 8px;
+  background-color: #192033;
+  color: #fff;
+  white-space: nowrap;
+  font-size: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 3rem;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  transition: all 0.2s ease;
+}
+.download-button svg {
+  height: 20px;
+  width: 20px;
+  margin-right: 6px;
+}
+
+.download-button:hover {
+  background-color: #2f3a58;
+}
+
 /* Loader Animation */
 .lds-ellipsis {
   margin: 15rem auto;
@@ -556,6 +599,43 @@ header a {
   }
   100% {
     transform: translate(24px, 0);
+  }
+}
+
+/* Convert Loader Animation */
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 
