--- a/src/index.css
+++ b/src/index.css
@@ -628,11 +628,46 @@ header a {
 }
 
 /* Convert Loader Animation */
+
+.convert-loader-container {
+  top: 0;
+  left: 0;
+  background-color: rgba(217, 221, 225, 0.55);
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: inherit;
+  animation: fade-in 0.5s normal ease;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.convert-text {
+  font-size: 0.75rem;
+  font-weight: 800;
+  position: absolute;
+  display: block;
+  color: var(--accent-color);
+}
+
 .lds-ring {
   display: inline-block;
   position: relative;
   width: 80px;
   height: 80px;
+  transform: scale(2);
 }
 .lds-ring div {
   box-sizing: border-box;
@@ -641,10 +676,10 @@ header a {
   width: 64px;
   height: 64px;
   margin: 8px;
-  border: 8px solid #fff;
+  border: 8px solid var(--accent-color);
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #fff transparent transparent transparent;
+  border-color: var(--accent-color) transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
@@ -676,6 +711,16 @@ header a {
   .video-container {
     width: 100%;
     height: 250px;
+    max-width: 772px;
+    border-radius: var(--big-border-radius);
+    transition: all 0.25s ease;
+  }
+}
+
+@media only screen and (max-height: 820px) {
+  .video-container {
+    width: 70%;
+    height: 320px;
     max-width: 772px;
     border-radius: var(--big-border-radius);
     transition: all 0.25s ease;
